--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'kodilla-courses'
 include 'kodilla-testing'
 include 'kodilla-stream'
+include 'kodilla-exception'
+include 'kodilla-exception'
+include 'kodilla - exceptionn'
 
