--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'kodilla-stream'
 include 'kodilla-exception'
 include 'kodilla-exception'
 include 'kodilla - exceptionn'
+include 'kodilla-rps'
 
