--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'kodilla-exception'
 include 'kodilla-exception'
 include 'kodilla - exceptionn'
 include 'kodilla-rps'
+include 'kodilla-good-patterns'
 
