--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testCompile ('junit:junit:4.12')
     testCompile ('org.mockito:mockito-all:1.10.19')
+    implementation 'junit:junit:4.12'
 }
