--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,4 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-patterns'
-
+include 'kodilla-jdbc'
