--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
+include 'kodilla-jdbc2'
