--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     }
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    compile('org.springframework.boot:spring-boot-starter-aop')
 }
 
 test {
