Exercise 31.2 - Selenium Webdriver

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-jdbc2'
 include 'kodilla-hibernate'
+include 'kodilla-testing2'
 
