--- a/kodilla-testing2/build.gradle
+++ b/kodilla-testing2/build.gradle
@@ -12,5 +12,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.6.0'
+//    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.6.0'
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+
 }
